--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ pdfminer3
 streamlit_tags
 nltk
 streamlit
-spacy
+spacy>=2.2.0,<3.0.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
