--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,8 @@ streamlit_tags
 nltk
 streamlit
 spacy>=2.2.0,<3.0.0
+pdfminer.six==20211012
+PyMuPDF==1.20.0
+spacy==2.3.5
+stqdm==0.0.4
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
