--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ PyMuPDF==1.20.0
 spacy==2.3.5
 stqdm==0.0.4
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+python -m nltk.downloader stopwords
